<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.lch.we.alchemy.activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/mainColor"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginTop="60dp"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="28dp" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_app_name"
            android:layout_centerHorizontal="true"
            android:text="V1.0.0"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@mipmap/bg_snow" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/btn_start"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/layout_control_accessibility_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="6dp"
                        android:background="@mipmap/ic_start" />

                    <TextView
                        android:id="@+id/layout_control_accessibility_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_assistant"
                        android:textAlignment="center"
                        android:textColor="#dfaa6a"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

<!--            <LinearLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:orientation="vertical">-->

<!--                <LinearLayout-->
<!--                    android:id="@+id/btn_start_watch_notification"-->
<!--                    android:layout_width="120dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:gravity="center"-->
<!--                    android:orientation="vertical">-->

<!--                    <ImageView-->
<!--                        android:layout_width="32dp"-->
<!--                        android:layout_height="32dp"-->
<!--                        android:layout_margin="6dp"-->
<!--                        android:background="@mipmap/ic_start" />-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/open_monitor_notification"-->
<!--                        android:textAlignment="center"-->
<!--                        android:textColor="#dfaa6a"-->
<!--                        android:textSize="18dp"-->
<!--                        android:textStyle="bold" />-->
<!--                </LinearLayout>-->
<!--            </LinearLayout>-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/btn_setting"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="6dp"
                        android:background="@mipmap/ic_settings" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/preference_setting"
                        android:textAlignment="center"
                        android:textColor="#dfaa6a"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="18dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="15dp"
            android:visibility="invisible"
            android:src="@mipmap/ic_github" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:text="@string/github_1"
            android:textColor="#858585" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingBottom="1dp"
            android:text="@string/star_1"
            android:textColor="#dfaa6a" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/star_2"
            android:textColor="#dfaa6a"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:text="@string/github_2"
            android:textColor="#858585" />
    </LinearLayout>
</LinearLayout>
